--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQHJ4AZ3s17sTsmb0zA7UE",
+      "authorship_tag": "ABX9TyMziOfVhmhVrd3NglHruJfH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "students_data = {1:['Sam', 24] , 2:['Rob',25], 3:['Jack', 26], 4:['Cornor',24], 5:['Trump',27]}"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
       "source": [
         "type (students_data)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,7 +81,7 @@
         "  lt.append(val[1])\n",
         "print(lt)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "test = range(1,10)\n",
         "print (list(test))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "source": [
         "list(range(19,171,19))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
         "        l.append(i)\n",
         "l"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
         "for i in d:\n",
         "    print(i)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "source": [
         "l1 = [\"automobiles\", \"Honda\", \"Benz\", \"Suzuki\", \"Morris Garages\" ]"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "  l2.append(words.upper())\n",
         "print (l2)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "l2 = [words.upper() for words in l1]\n",
         "l2"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
       "source": [
         "n = int(input(\"Enter any number :\"))"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -365,7 +365,7 @@
         "  l2.append(i)\n",
         "print(l2)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
         "l2 = [i*i for i in list(range(1,n+1))]\n",
         "l2"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
         "      list_vowel.append(char)\n",
         "print(list_vowel)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
         "list_vowel =[char for char in input_list for i in char[0] if i in ['a','e','i','o','u']]\n",
         "list_vowel"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
         "        output_dict[val] = val**3\n",
         "print(output_dict)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
         "  capital.append(word.capitalize())\n",
         "print(capital)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +527,7 @@
         "x = int(input_list[0])\n",
         "y = int(input_list[1])"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +540,7 @@
         "  sqr = x**y\n",
         "  return sqr\n"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
       "source": [
         "sqaured(3,4)"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
         "\n",
         "greater(a,b)"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +608,7 @@
       "source": [
         "min = lambda x, y: x if x < y else y"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
       "source": [
         "min(101*99, 102*98)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,6 +634,124 @@
           },
           "metadata": {},
           "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Nn73C20x5_z",
+        "outputId": "47f9d7e8-c463-4070-aba9-4ddd1fb8e5bc"
+      },
+      "source": [
+        "list_numbers = (1,2,3,4)\n",
+        "sample_map = map(lambda x: x*2, list_numbers)\n",
+        "print(list(sample_map))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A2BJF5EO1WXX",
+        "outputId": "2263be18-9cf9-4ad1-d739-855e2d71dd10"
+      },
+      "source": [
+        "students_data = {1:['Sam', 15] , 2:['Rob',18], 3:['Kyle', 16], 4:['Cornor',19], 5:['Trump',20]}\n",
+        "\n",
+        "list(filter(lambda x : x[1] > 18, students_data.values()))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['Cornor', 19], ['Trump', 20]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "870kxiJ48_fI",
+        "outputId": "17940089-d334-4b63-bff4-48c2d459b956"
+      },
+      "source": [
+        "wrd = str(input(\"Enter a word :\"))\n",
+        "lst = ['r']\n",
+        "if lst[0] in wrd:\n",
+        "    print(\"belongs to team r\")\n",
+        "else :\n",
+        "        print(\"does not belongs to team r\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a word :word\n",
+            "belongs to team r\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-GsSY3-mCFCs",
+        "outputId": "fc4d57fb-05b8-4396-8e9f-dbb89633b45d"
+      },
+      "source": [
+        "# write code here \n",
+        "wrd = str(input(\"Enter a word :\"))\n",
+        "lst1 = ['r']\n",
+        "lst2 = ['b']\n",
+        "for i in wrd :\n",
+        "  if i == lst1[0]:\n",
+        "    print(\"it is red team\") \n",
+        "    break\n",
+        "  if i ==  lst2[0]:\n",
+        "    print(\"blue team\")\n",
+        "    break\n",
+        "else:\n",
+        "  print(\"no team\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a word :woxx\n",
+            "no team\n"
+          ]
         }
       ]
     }
