--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMziOfVhmhVrd3NglHruJfH",
+      "authorship_tag": "ABX9TyOyr3002sje38w+058A2JWk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "students_data = {1:['Sam', 24] , 2:['Rob',25], 3:['Jack', 26], 4:['Cornor',24], 5:['Trump',27]}"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
       "source": [
         "type (students_data)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,7 +81,7 @@
         "  lt.append(val[1])\n",
         "print(lt)"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "test = range(1,10)\n",
         "print (list(test))"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "source": [
         "list(range(19,171,19))"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
         "        l.append(i)\n",
         "l"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
         "for i in d:\n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "source": [
         "l1 = [\"automobiles\", \"Honda\", \"Benz\", \"Suzuki\", \"Morris Garages\" ]"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "  l2.append(words.upper())\n",
         "print (l2)"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "l2 = [words.upper() for words in l1]\n",
         "l2"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
       "source": [
         "n = int(input(\"Enter any number :\"))"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "name": "stdout",
@@ -365,7 +365,7 @@
         "  l2.append(i)\n",
         "print(l2)"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
         "l2 = [i*i for i in list(range(1,n+1))]\n",
         "l2"
       ],
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
         "      list_vowel.append(char)\n",
         "print(list_vowel)"
       ],
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
         "list_vowel =[char for char in input_list for i in char[0] if i in ['a','e','i','o','u']]\n",
         "list_vowel"
       ],
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
         "        output_dict[val] = val**3\n",
         "print(output_dict)"
       ],
-      "execution_count": null,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
         "  capital.append(word.capitalize())\n",
         "print(capital)"
       ],
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +527,7 @@
         "x = int(input_list[0])\n",
         "y = int(input_list[1])"
       ],
-      "execution_count": null,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -540,7 +540,7 @@
         "  sqr = x**y\n",
         "  return sqr\n"
       ],
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
       "source": [
         "sqaured(3,4)"
       ],
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
         "\n",
         "greater(a,b)"
       ],
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +608,7 @@
       "source": [
         "min = lambda x, y: x if x < y else y"
       ],
-      "execution_count": null,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
       "source": [
         "min(101*99, 102*98)"
       ],
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +651,7 @@
         "sample_map = map(lambda x: x*2, list_numbers)\n",
         "print(list(sample_map))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +676,7 @@
         "\n",
         "list(filter(lambda x : x[1] > 18, students_data.values()))"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +707,7 @@
         "else :\n",
         "        print(\"does not belongs to team r\")"
       ],
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +743,7 @@
         "else:\n",
         "  print(\"no team\")"
       ],
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,6 +751,91 @@
           "text": [
             "Enter a word :woxx\n",
             "no team\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gvAeiyrKmBMX",
+        "outputId": "e5eaaac2-5154-4f25-fcc9-0cd7e19d40f1"
+      },
+      "source": [
+        "sample_list = [6, 98, 34, 45, 64, 7, 2, 5, 78, 90, 324, 111, 657, 438]\n",
+        "len_test = len(sample_list)\n",
+        "print(len_test)\n",
+        "new_list = [sample_list[i]+13 for i in range(1,len_test)]\n",
+        "new_list"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[111, 47, 58, 77, 20, 15, 18, 91, 103, 337, 124, 670, 451]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rt5tNXoPuh_e"
+      },
+      "source": [
+        "def factor_num(inp) :\n",
+        " n = inp\n",
+        " lst_1=[]\n",
+        " for i in range(1,n+1):\n",
+        "  a = inp%i\n",
+        "  if (a == 0): \n",
+        "   lst_1.append(i)\n",
+        " return lst_1"
+      ],
+      "execution_count": 166,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GpfL63za5LK4",
+        "outputId": "3068dc22-9dcd-48f8-b10f-2c3cc8a7189f"
+      },
+      "source": [
+        "sample_list = [6, 98, 34, 45, 64, 7, 2, 5, 78, 90, 324, 111, 657, 438]\n",
+        "len_sample = len(sample_list)\n",
+        "dict = {}\n",
+        "for i in range (0,len_sample):\n",
+        "    a=(sample_list[i])\n",
+        "    factor_num(a)\n",
+        "    dict[a]=factor_num(a)\n",
+        "print(dict)"
+      ],
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{6: [1, 2, 3, 6], 98: [1, 2, 7, 14, 49, 98], 34: [1, 2, 17, 34], 45: [1, 3, 5, 9, 15, 45], 64: [1, 2, 4, 8, 16, 32, 64], 7: [1, 7], 2: [1, 2], 5: [1, 5], 78: [1, 2, 3, 6, 13, 26, 39, 78], 90: [1, 2, 3, 5, 6, 9, 10, 15, 18, 30, 45, 90], 324: [1, 2, 3, 4, 6, 9, 12, 18, 27, 36, 54, 81, 108, 162, 324], 111: [1, 3, 37, 111], 657: [1, 3, 9, 73, 219, 657], 438: [1, 2, 3, 6, 73, 146, 219, 438]}\n"
           ]
         }
       ]
