--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyr3002sje38w+058A2JWk",
+      "authorship_tag": "ABX9TyMtaFp7COsxLb9M/VD1jraJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -839,6 +839,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b-Bls7pkInJ7"
+      },
+      "source": [
+        "sample_sentence = \"Pack my box with five dozen liquor jugs\"\n",
+        "blank = [' ']\n",
+        "set_lst=[]\n",
+        "# write code here \n",
+        "for i in sample_sentence :\n",
+        "    if i != blank[0]:\n",
+        "     set_lst.append(i)\n",
+        "set(set_lst)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
