--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtaFp7COsxLb9M/VD1jraJ",
+      "authorship_tag": "ABX9TyPpYRNQtCfeRcNcXxSmQclD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -843,7 +843,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b-Bls7pkInJ7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b-Bls7pkInJ7",
+        "outputId": "0c655bec-dee2-4259-8709-472bc54e24f0"
       },
       "source": [
         "sample_sentence = \"Pack my box with five dozen liquor jugs\"\n",
@@ -855,8 +859,157 @@
         "     set_lst.append(i)\n",
         "set(set_lst)"
       ],
-      "execution_count": null,
+      "execution_count": 221,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'P',\n",
+              " 'a',\n",
+              " 'b',\n",
+              " 'c',\n",
+              " 'd',\n",
+              " 'e',\n",
+              " 'f',\n",
+              " 'g',\n",
+              " 'h',\n",
+              " 'i',\n",
+              " 'j',\n",
+              " 'k',\n",
+              " 'l',\n",
+              " 'm',\n",
+              " 'n',\n",
+              " 'o',\n",
+              " 'q',\n",
+              " 'r',\n",
+              " 's',\n",
+              " 't',\n",
+              " 'u',\n",
+              " 'v',\n",
+              " 'w',\n",
+              " 'x',\n",
+              " 'y',\n",
+              " 'z'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 221
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BAFUXns-LG7-"
+      },
+      "source": [
+        "def factor_num(inp) :\n",
+        " n = inp\n",
+        " lst_1=[]\n",
+        " for i in range(2,n+1):\n",
+        "  a = inp%i\n",
+        "  if (a == 0):\n",
+        "   x =  inp//i\n",
+        "   lst_1.append(x)\n",
+        " return lst_1\n"
+      ],
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZxeZmda9Mv2O"
+      },
+      "source": [
+        "lst = sum(factor_num(75))"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vyYHXgYiOOzx",
+        "outputId": "dba208d0-1818-4c66-9cda-e44908fb0e7d"
+      },
+      "source": [
+        "lst"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hu3G26jnYYOY"
+      },
+      "source": [
+        "# write code here\n",
+        "\n",
+        "def add_list(l1,l2):\n",
+        "    l3 = []\n",
+        "    len_l1=len(l1)\n",
+        "    for i in range(0,len_l1):\n",
+        "        l_3 = l1[i]+l2[i]\n",
+        "        l3.append(l_3)\n",
+        "    return l3"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9os7LJ0OHZn"
+      },
+      "source": [
+        "l1 = [5, 8, 9, 12]\n",
+        "l2 = [10, 12, 8, 6]"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iO1sAac0ZP84",
+        "outputId": "28997a5a-972c-4c66-fe61-6218f46b8408"
+      },
+      "source": [
+        "add_list(l1,l2)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[15, 20, 17, 18]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     }
   ]
 }
