--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPpYRNQtCfeRcNcXxSmQclD",
+      "authorship_tag": "ABX9TyOB1MNQi77pWmT+4YCU4Tas",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -964,13 +964,13 @@
         "\n",
         "def add_list(l1,l2):\n",
         "    l3 = []\n",
-        "    len_l1=len(l1)\n",
-        "    for i in range(0,len_l1):\n",
+        "    #len_l1=len(l1)\n",
+        "    for i in range(0,4):\n",
         "        l_3 = l1[i]+l2[i]\n",
         "        l3.append(l_3)\n",
-        "    return l3"
+        "    return"
       ],
-      "execution_count": 29,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -982,7 +982,20 @@
         "l1 = [5, 8, 9, 12]\n",
         "l2 = [10, 12, 8, 6]"
       ],
-      "execution_count": 30,
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iO1sAac0ZP84"
+      },
+      "source": [
+        "def add_list_n(a1,a2):\n",
+        "    a3 = a1+a2\n",
+        "    return a3"
+      ],
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -991,13 +1004,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "iO1sAac0ZP84",
-        "outputId": "28997a5a-972c-4c66-fe61-6218f46b8408"
+        "id": "h35fkoLbbT2g",
+        "outputId": "b85225bc-fa8e-497c-e4bd-001ffb6e6b15"
       },
       "source": [
-        "add_list(l1,l2)"
+        "list(map(add_list_n,l1,l2))"
       ],
-      "execution_count": 31,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,9 +1020,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 51
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6TIBjj7jbcMB"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
