--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOB1MNQi77pWmT+4YCU4Tas",
+      "authorship_tag": "ABX9TyM6BlhvkH/pACfFOlmz3F0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1027,7 +1027,221 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6TIBjj7jbcMB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6TIBjj7jbcMB",
+        "outputId": "8cd96110-af15-4dec-88b8-bca6d940d822"
+      },
+      "source": [
+        "get_elemts = lambda x : x[0] == 's' or x[0] == 'S'\n",
+        "get_elemts('s')"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G6exJt-biXCB"
+      },
+      "source": [
+        "n_lst=['Santa Cruz','Santa fe','Mumbai','Delhi']"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AjWQGLFHiOiw",
+        "outputId": "4f530d03-1638-4797-f2f2-751a12fdf567"
+      },
+      "source": [
+        "map(get_elemts,n_lst)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<map at 0x7f98b6f6be50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tQxwzS1NidcM",
+        "outputId": "4e3d484b-50cb-4ff4-d17d-65e7d72faa8a"
+      },
+      "source": [
+        "l_map=list(map(get_elemts,n_lst))\n",
+        "l_map.count(True)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DjjLdlY9kSVM",
+        "outputId": "53210ea2-b653-49d5-888b-766e9b1ad1e0"
+      },
+      "source": [
+        "input_list = [ ['Ankur', 'Avik', 'Kiran', 'Nitin'], ['Narang', 'Sarkar', 'R', 'Sareen']]\n",
+        "first_name = input_list[0]\n",
+        "last_name = input_list[1]\n",
+        "print(first_name)"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Ankur', 'Avik', 'Kiran', 'Nitin']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jw5TPVMekc-3"
+      },
+      "source": [
+        "full_name=lambda x,y: x+' '+y"
+      ],
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "9jLqQj4Jk8YH",
+        "outputId": "7c95c01d-9386-4341-8f98-39c78733e4f0"
+      },
+      "source": [
+        "full_name('abc','b')"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'abc b'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "cOH_Y4eFlfny",
+        "outputId": "1e2c4189-b3c4-463d-c76f-f87c4d603b9e"
+      },
+      "source": [
+        "full_name(first_name[0],last_name[0])"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Ankur Narang'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1TTfov-Jl_2_",
+        "outputId": "a004bad2-8f13-42ad-db14-d2ae30857dcc"
+      },
+      "source": [
+        "list(map(full_name,first_name,last_name))"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Ankur Narang', 'Avik Sarkar', 'Kiran R', 'Nitin Sareen']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rsv1eUOHmxpm"
       },
       "source": [
         ""
