--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6BlhvkH/pACfFOlmz3F0W",
+      "authorship_tag": "ABX9TyPaWkkZbATTPrkfH/+GMh84",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1244,10 +1244,318 @@
         "id": "Rsv1eUOHmxpm"
       },
       "source": [
-        ""
+        "list_int = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nJAe8OVtnZT-"
+      },
+      "source": [
+        "mul_5 = lambda x: x%5 == 0"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BZlcCi-0nmTs",
+        "outputId": "1f42228c-3340-480c-eb1e-407880ad38ab"
+      },
+      "source": [
+        "mul_5(10)"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7u4s1Eanno9T",
+        "outputId": "45a3a805-023b-436c-8073-90508b4bed7c"
+      },
+      "source": [
+        "list(filter(mul_5,list_int))"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 10, 15, 20, 25, 30, 35, 40, 45, 50]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s0f02hS8o_K8"
+      },
+      "source": [
+        "get_name=lambda x : x[0] =='s' and x[-1] =='p'"
+      ],
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OiQA06NApMRh",
+        "outputId": "3d55b0a9-9432-47fc-ca70-4a7ff4902714"
+      },
+      "source": [
+        "get_name('samp')"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SBshz78Qp_yc"
+      },
+      "source": [
+        "input_list=['soap','sharp','shy','silent','ship','summer','sheep']"
+      ],
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e-ZJOmXkqTix",
+        "outputId": "b581dcdc-9fbb-4b63-b8df-cd8b63675a92"
+      },
+      "source": [
+        "filter(get_name,input_list)"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<filter at 0x7f98b704d790>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MVUfxW7PqZpK",
+        "outputId": "0a011495-a637-4641-b31c-a276bcfdbbab"
+      },
+      "source": [
+        "list(filter(get_name,input_list))"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['soap', 'sharp', 'ship', 'sheep']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jm4NFeSjrGmP"
+      },
+      "source": [
+        "input_list  = ['All','you','have','to','fear','is','fear','itself']"
+      ],
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0OBRuororLsV"
+      },
+      "source": [
+        "from functools import reduce"
+      ],
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JeTjVyAyrRUX"
+      },
+      "source": [
+        "get_concat=lambda x,y : x+' '+y"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "axNdw5GsrmqA",
+        "outputId": "cd24db20-8994-40d8-97de-fe8f59e3ba7c"
+      },
+      "source": [
+        "get_concat('s','sa')"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'s sa'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ypN6Lho7r0-W"
+      },
+      "source": [
+        "conc=reduce(get_concat,input_list)"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GZHFs8nVsM7-",
+        "outputId": "0694020a-3245-4278-a72f-82afc32fc8de"
+      },
+      "source": [
+        "print(conc)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All you have to fear is fear itself\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0feJ04CduG-c"
+      },
+      "source": [
+        "lst_n=[65,76,87,23,12,90,99]"
+      ],
+      "execution_count": 126,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ktc-qvPpuLcO"
+      },
+      "source": [
+        "lambda_max = lambda x,y: max(x,y)"
+      ],
+      "execution_count": 130,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ohfzxBDuuTdC",
+        "outputId": "1592fe8c-ff65-430b-ccfe-ca2408b0f2ab"
+      },
+      "source": [
+        "reduce(lambda_max,lst_n)"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "99"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 131
+        }
+      ]
     }
   ]
 }
